@@ -21,8 +21,7 @@ matrix:
 env:
  global:
   # DCOR_API_KEY
-  - secure: "XM4d9iG133VWgOlRisJ6Z2APIYeDiojn8Qs6NiniA40VUYLVq0IrFPoRP2LE3RjNlejvL4QJPLk7v1WiOjmcjtxWYupp0qHQDFqn1JPqGb9yW09IqhYybh/n2AdHydmwmUxIfroHQUFdzFUf6dGsWkPVWIAQdUbvuAiyf54AcFWz8cf6arrNsHzh/6y5uro+630b3VMlqTNWrSiUVnfR5+tVo1xB/SBsRZ2RpS83A6CBlGk4dpo0V+yhi8aKzHGBOV0ejZurwWMsqmE5CowS4G4KSsDMQrz1DubAFrjCPI1dj+ePaVmhB+IHLrTESdUc0oQ6SRW7jR5VVt0GMsZqyc/9Ppk9vrlo6/NTt1u4AOoUFs4Wqe5FLYMrvRnDL1w/UCSaC85XBP2Zb6NqyEdWefj9gz6S1TQvCEffZy/t3WxkZjYnaABxFxWnvsYf31gUSMab/vuB+1u1rjnduVZf7NsG8CwDgxkW87uPVs3BjQ4EIptMSgpVoUSAm2O4Apar78q9XPyCyRd6F55ynBI9+Zk7oZEa5RUq7Gp7IKFPl+ZXWyKMasUy5hNL/qaK6HRQ4rVS3qPN0GRAhvbTh0dROv5zWussDMWyMkWUjyxFE1at2iN4GMHqMTJb/Dsoih8WMqpiW9mLwcxHv9csmFFYaUtA58YXOKNOi5x0Bpr6bLU="
-
+  - secure: "XiGiTwDS340zvDTxT5SoXJ99FlMhhJxfmeZFxXJ+nWG24U56GXW/XPuaWVw/+F7yeTV2OJ2lK3g1Pwpo0JWGkH94kcha+6m2FqDNDmcJqcwecYF4h6YRtaQx+fnIf8teEkWyzunHa+MP4IbLWh4GWa7VrpNfSgdj6CKk88GGs4EFIpSEMqBcC1Ob286P9wv4BJx3eZR1zT0rIyRrTrznGFdDdwjQbv9knqnVmT3cmTQ/FF8A3JxcSOU8adNbYpgvpdNVxEe31L5ty3dtTrPOPWiXvrNiT8M2u67QEqRrN0GymzT94K83t6tKqUO5ZM3qXitK4wVSQaAtCLWxtidjhx05g141Em1UVLzyev37PCPlgyavzigGJVoA3/L2sLCGJkhzDxm9vKOte8gcugMTIBf/tpFPd+TIA7eiCHngogSo69VWvqpYrNyh0B+9R1LGCFhijQGHgPV/eLbdPnlRP2ucfIASJvWSk3vts2yVzFdY6mLu1W6U8RK3L4JxG+9c5yJxwDJjS9EnYKBDpolRgt/BF53wFzFF5ALf0ycbTtGRrsB2NGtuy0j73xkf4rjXEcdm8yx8iKm9skJ2FABdsoD86M/7EWsQTSZLX4vco/q8+TKi3YfUiqEEU/HabhkV5HL53rK4cvRadibly1aIQF83ghDSPJFfbtOy/p1REio="
 install:
 # install other dependencies
 - source ./.travis/${TRAVIS_OS_NAME}_setup_python.sh $MAC_PYTHON_VERSION $MAC_PYTHON_OSX_VERSION
