@@ -1,6 +1,7 @@
 0.0.7
  - fix: start even if DCOR is down
  - fix: do not display mean upload rate during upload
+ - enh: increase verbosity of CKANAPI
  - ref: move connectivity check and user database update to separate
    background threads
  - ref: store traceback of failed upload in job info
